--- a/Templete One/index.html
+++ b/Templete One/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>
+      Vertilux Blinds &amp; Shades® | 3/4&amp;quot; (20mm) Aluminum Bottom Rail
+      Tube
+    </title>
+    <link href="/favicon.png" rel="icon" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
