--- a/Templete Three/index.html
+++ b/Templete Three/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>
+      Vertilux Blinds & Shades® | VTI®RE-LION Celtic Bidirectional Battery Motor
+      25mm | 1Nm | 30rpm
+    </title>
+    <link href="/favicon.png" rel="icon" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
